Membuat Perubahan sedikit pada HTML dan CSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="game-view-port">
+        <div class="game-view-port" id="port">
             <div class="enemy" id="enemy"></div>
             <div class="player" id="player"></div>
         </div>
