Menambahkan Guide Control pada HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 <body>
     <div class="container">
+        <ul>
+            <li>Gerak Kiri = Left Arrow <-</li>
+            <li>Gerak Kanan = Right Arrow -></li>
+            <li>Menambak = Space</li>
+        </ul>
+        <ul>
+            <li>Fitur yang belum dibuat:</li>
+            <li>Mati Tertimpa Alien</li>
+            <li>Alien Menyentuh Tanah</li>
+            <li>Alien Menembak Balik</li>
+        </ul>
         <div class="game-view-port" id="port">
             <div class="player" id="player"></div>
         </div>
