Menambahkan Score Board dan Game Over dari Mati Tertimpa Alien

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
             <li>Menambak = Space</li>
         </ul>
         <ul>
-            <li>Fitur yang belum dibuat:</li>
-            <li>Mati Tertimpa Alien</li>
-            <li>Alien Menyentuh Tanah</li>
-            <li>Alien Menembak Balik</li>
+            <li id="score"></li>
         </ul>
         <div class="game-view-port" id="port">
             <div class="player" id="player"></div>
